# obs-mappy-filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/locale/: en-US.ini
src/: obs-shape-overlay.cpp  shape_overlay_filter.cpp  shape_overlay_filter.h
